k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: poll-system
  labels:
    name: poll-system
